# face-sdk

./: .gitattributes  .lfsconfig  LICENSE.txt  README.md  README_rus.md  RELEASE_NOTES.md  android_arm_32.tar.xz  android_arm_64.tar.xz  ios_arm_64.tar.xz  jetson_jetpack_4.3_4.4.tar.xz  linux_aarch64.tar.xz  linux_armhf_32.tar.xz  linux_astra_1.11_x86_64.tar.xz  linux_x86_32.tar.xz  linux_x86_64.tar.xz  linux_x86_64_cuda.tar.xz
conf/facerec/: access_control_system_one_face_q1.xml  access_control_system_one_face_q3.xml  age_gender_estimator.xml  age_gender_estimator_v2.xml  age_gender_estimator_v3.xml  background_uniformity_estimator.xml  common_capturer.xml  common_capturer2.xml  common_capturer4.xml  common_capturer4_fda.xml  common_capturer4_fda_singleface.xml  common_capturer4_fda_singleface_with_angles.xml  common_capturer4_fda_singleface_with_angles_noise.xml  common_capturer4_fda_with_angles.xml  common_capturer4_fda_with_angles_noise.xml  common_capturer4_lbf.xml  common_capturer4_lbf_singleface.xml  common_capturer4_mesh.xml  common_capturer4_mesh_singleface.xml  common_capturer4_mesh_singleface_with_angles.xml  common_capturer4_mesh_singleface_with_angles_noise.xml  common_capturer4_mesh_with_angles.xml  common_capturer4_mesh_with_angles_noise.xml  common_capturer4_singleface.xml  common_capturer4_singleface_with_angles.xml  common_capturer4_singleface_with_angles_noise.xml  common_capturer4_with_angles.xml  (+103 more)
doc/: guidelines_for_cameras.md  licenses.md  performance_parameters.md  use_cases.md
doc/en/: licenses.md  (+3 more)
examples/cpp/: CMakeLists.txt  README.txt
examples/cpp/body_detector/: CMakeLists.txt  body_detector.cpp
examples/cpp/console_arguments_parser/: ConsoleArgumentsParser.h
examples/cpp/demo/: CMakeLists.txt  demo.cpp
examples/cpp/pbio_cpp/: CMakeLists.txt  noop.cpp
examples/cpp/processing_block/: CMakeLists.txt  processing_block.cpp
examples/cpp/processing_block_recognition_demo/: CMakeLists.txt  main.cpp
examples/cpp/test_calibration/: CMakeLists.txt  test_calibration.cpp
examples/cpp/test_facecut/: CMakeLists.txt  test_facecut.cpp
examples/cpp/test_filecap/: CMakeLists.txt  test_filecap.cpp
examples/cpp/test_identify/: CMakeLists.txt  test_identify.cpp
examples/cpp/test_sdk/: CMakeLists.txt
examples/cpp/test_sdk/include/: TAssert.h  common.h  convert_config_format.h  detection.h  processing.h  progress.h  recognition_test11.h  recognition_test1N.h  search_speed_test.h
examples/cpp/test_sdk/scripts/: README.md  requirements.txt  runtime_test_sdk.bat  runtime_test_sdk.sh  viz_roc.py
examples/cpp/test_sdk/src/: common.cpp  convert_config_format.cpp  detection.cpp  main.cpp  processing.cpp  recognition_test11.cpp  recognition_test1N.cpp  search_speed_test.cpp
examples/cpp/test_videocap/: CMakeLists.txt  test_videocap.cpp
examples/cpp/video_recognition_demo/: CMakeLists.txt  Database.cpp  OpencvSource.h  OpenniSource.h  RealSenseSource.h  Worker.cpp  Worker.h
examples/cpp/video_recognition_demo/samples/: demo_web_active_liveness_v30.bat  demo_web_active_liveness_v30.sh  demo_web_m6v7.bat  demo_web_m6v7.sh  demo_web_m_last_v100.bat  demo_web_m_last_v100.sh  demo_web_m_last_v1000.bat  demo_web_m_last_v1000.sh  demo_web_m_last_v30.bat  demo_web_m_last_v30.sh  demo_web_m_last_v300.bat  demo_web_m_last_v300.sh
examples/cpp/video_recognition_demo/samples/base/person1/: name.txt
examples/cpp/video_recognition_demo/samples/base/person2/: 00001fb010_930831.tif  name.txt
examples/cpp/video_recognition_demo/samples/base/person3/: 123.tif  name.txt
examples/cpp/video_recognition_demo/src/: Database.cpp  Database.h  ImageAndDepthSource.h  MAssert.h  OpencvSource.h  OpenniSource.h  StreamVideoCapture.cpp  StreamVideoCapture.h  Worker.cpp  Worker.h  main.cpp
node_js_api/: face_sdk_3divi.js  package.json
python_api/: README.md  setup.py
swift_api/: CallbackData.h  CallbackData.mm  Capturer.h  Capturer.mm  CheckException.swift  ExceptionCheck.h  ExceptionCheck.mm  FacerecService.h  FacerecService.mm  Point.h  Point.mm  RawImage.h  RawImage.mm  RawSample.h  RawSample.mm  Recognizer.h  Recognizer.mm  SwiftCallback.swift  Template.h  Template.mm  TryCatch.mm  VideoWorker.h  VideoWorker.mm  swift_callback.h
testing_methods/: age_test.py  cvat_annotation_converter.py  detection_test.py  gender_test.py  liveness_test.py  mask_test.py  recognition_test.py  requirements.txt  utils.py
(+776 files in other folders)
